--- a/frontend/src/app/admin/admin.component.html
+++ b/frontend/src/app/admin/admin.component.html
@@ -6,4 +6,5 @@
 <app-experience-admin ></app-experience-admin>
 <span class="anchor" id="projects" class="anchor"></span>
 <app-project-admin></app-project-admin>
+<app-file-admin></app-file-admin>
 
