--- a/frontend/src/app/admin/project-admin/project-admin.component.scss
+++ b/frontend/src/app/admin/project-admin/project-admin.component.scss
@@ -5,6 +5,7 @@ section{
   border: 1px solid var(--green);
   border-radius: 3px;
   position: relative;
+  margin-bottom: 104px;
 
   h1{
     padding: 0;
