--- a/frontend/src/app/admin/skill-admin/skill-admin.component.scss
+++ b/frontend/src/app/admin/skill-admin/skill-admin.component.scss
@@ -16,7 +16,7 @@ section{
 
   .grid-3 {
     display: grid;
-    grid-template-columns: 2fr 2fr 1fr ;
+    grid-template-columns: 2fr 2fr 2fr 1fr ;
     gap: 30px;
     height: calc(100% - 70px);
 
