--- a/frontend/src/app/components/misc/progress-bar/progress-bar.component.scss
+++ b/frontend/src/app/components/misc/progress-bar/progress-bar.component.scss
@@ -36,5 +36,15 @@
 @media screen and (max-width: 1330px) {
   .content {
     width: 100%;
+    padding: 5px;
+
+    label{
+      font-size: .7em;
+    }
+
+    span {
+      font-size: .6em;;
+    }
   }
+
 }
