--- a/frontend/src/app/components/misc/project/project.component.scss
+++ b/frontend/src/app/components/misc/project/project.component.scss
@@ -124,8 +124,8 @@
       position: relative;
 
       .nav{
-        display: block;
-        height: 50px;
+        display: flex;
+        height: 40px;
         position: absolute;
         top: 0;
         left: 0;
@@ -133,6 +133,15 @@
         background: var(--navy-shadow);
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 5%;
+        gap: 5px;
+
+        a {
+          color: var(--green);
+          font-size: .9em;
+        }
       }
 
       .summary{
