--- a/frontend/src/app/components/structure/header/header.component.scss
+++ b/frontend/src/app/components/structure/header/header.component.scss
@@ -84,6 +84,7 @@ header{
   //bottom: 20px;
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 8px;
   transform: translate(calc(100% + 30px), -50%);
   transition: all .3s ease-out;
@@ -105,7 +106,10 @@ header{
     align-items: center;
 
     &.current {
-      background: red;
+      width: 36px;
+      height: 36px;
+      color: var(--green);
+      border-width: 3px;
     }
 
     &.disabled{
@@ -140,6 +144,18 @@ header{
   &:hover {
     opacity: 1;
   }
+}
+
+.logout {
+  height: 40px !important;
+  width: 40px;
+  padding: 0 !important;
+  margin-left: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: var(--green) 3px solid;
+  border-radius: 50%;
 }
 
 @media screen and (max-width: 800px){
