--- a/frontend/src/app/home/home.component.scss
+++ b/frontend/src/app/home/home.component.scss
@@ -11,6 +11,7 @@ section{
 
   &.first{
     height: calc(100vh - 80px);
+    //position: relative;
   }
 
   &:not(.first){
@@ -83,10 +84,50 @@ h3{
   font-family: "Roboto Condensed";
   font-size: 2em;
   padding: 0;
-  margin: 0;
+  margin: 0 0 30px;
   font-family: Khand;
   font-weight: 600;
-  color: var(--white)
+  color: var(--white);
+}
+
+.quick-review {
+
+  width: calc(100% - 240px);
+  position: absolute;
+  bottom: 10%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  overflow: hidden;
+
+  .stylebar{
+    background: var(--dark-green);
+    height: 1px;
+  }
+
+  .quick-review-infos {
+    display: flex;
+    //gap: 20px;
+    font-size: .8em;
+    transition: all 1.2s;
+
+    > span {
+      color: var(--white);
+      > span {
+        color: var(--green)
+      }
+    }
+  }
+}
+
+
+
+.overview {
+  font-size: 1.2em;
+  overflow: hidden;
+  color: var(--white);
+  font-weight: 300;
 }
 
 .grid{
@@ -233,6 +274,24 @@ textarea{
   display: none;
   grid-template-columns: repeat(3, 1fr);
   border-bottom: 2px solid var(--navy-shadow);
+  position: relative;
+
+  .category-underline{
+    position: absolute;
+    width: 33.3%;
+    height: 2px;
+    background: var(--green);
+    bottom: -2px;
+    transition: all .2s;
+
+    &.second {
+      transform: translateX(100%);
+    }
+
+    &.third {
+      transform: translateX(200%);
+    }
+  }
 
   .navLink {
     display: inline-block;
@@ -247,21 +306,13 @@ textarea{
 
     &.active {
       color: var(--white);
-      position: relative;
-      &::after{
-        content: '';
-        height: 2px;
-        position: absolute;
-        left: 0;
-        bottom: -2px;
-        background: var(--green);
-        right: 0;
-      }
+      background: transparent;
     }
   }
 }
 
 @media screen and (max-width: 1330px) {
+
   h3{display: none}
   .resumeNav {
     display: grid;
@@ -286,6 +337,8 @@ textarea{
       height: auto;
     }
   }
+
+  .quick-review{display: none};
 
   .disable-aos-mobile [data-aos],
   .disable-aos-mobile[data-aos] {
@@ -313,6 +366,17 @@ textarea{
 }
 
 @media screen and (max-width: 800px) {
+
+  .overview{
+    text-align: center;
+    font-size: .8em;
+    margin-top: 40px;
+  }
+
+  .grid {
+    padding: 30px 0;
+  }
+
   .main_title{
     position: static;
     transform: none;
